destroy text VSCODE

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hello Git and World</h1>
-    <p>Testing VsCODE</p>
+    <p>Testing</p>
     <div>banner</div>
 </body>
 </html>
